fix dark mode and add link

--- a/assets/scss/components/_datasetHolder.scss
+++ b/assets/scss/components/_datasetHolder.scss
@@ -2,6 +2,11 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 12px;
+  
+  a {
+    text-decoration: none;
+    color: $gray-800;
+  }
 
   .datasetResult {
     background-color: $gray-100;
@@ -9,6 +14,7 @@
     border-radius: $border-radius;
     border: solid 1px transparent;
     cursor: pointer;
+    color: $gray-700;
 
     &:hover {
       border: solid 1px $gray-300;
@@ -50,6 +56,18 @@
   }
 }
 
+
+.filterBtn {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid #e9ecef;
+  border-radius: 0.25rem;
+}
 // shimmer animation
 @keyframes shimmer {
   0% {
@@ -75,5 +93,52 @@
   .datasetResults,
   .datasetResultsShimmers {
     grid-template-columns: 1fr 1fr;
+  }
+}
+
+html[data-dark-mode] {
+  .filterBtn {
+    color: $gray-400;
+    background-color: $gray-900;
+    border-color: $gray-700;
+  }
+
+  .btn-toggle-active {
+    background-color: $gray-700 !important;
+    border-color: $gray-700 !important;
+    color: $gray-100;
+  }
+}
+
+html[data-dark-mode] .datasetResults,
+html[data-dark-mode] .datasetResultsShimmers {
+
+  a {
+    color: $gray-100;
+  }
+
+  .datasetResult {
+    background-color: $gray-800;
+    border: solid 1px $gray-900;
+  }
+
+  .shimmer {
+    background-color: $gray-800;
+
+    div {
+      background-color: $gray-600;
+    }
+  }
+
+  @keyframes shimmer {
+    0% {
+      opacity: .6;
+    }
+    50% {
+      opacity: 1;
+    }
+    100% {
+      opacity: .6;
+    }
   }
 }
